--- a/hw4/hw4_jq2282.md
+++ b/hw4/hw4_jq2282.md
@@ -6,9 +6,9 @@ Dear instructors, I want to use **2 late days** for this homework.
 
 ### 2.1. Model architecture
 
-![Screen Shot 2019-12-06 at 2.26.28 AM](/Users/mac/Desktop/NLP/hw4/Screen Shot 2019-12-06 at 2.26.28 AM.png)
+![Screen Shot 2019-12-06 at 9.52.57 PM](/Users/mac/Desktop/NLP/hw4/Screen Shot 2019-12-06 at 9.52.57 PM.png)
 
-The seq2seq model is consisted of two main parts: RNN encoder and RNN decoder. For the encoder part, the input is a sequence of input tokens starting with the start-of-sequence (SOS) token and ending with the end-of-sequence (EOS) token. $h_n$ refers to the final hidden state of the encoder. For the decoder part, the decoder input is initialized as the numerical identifier of SOS token and the decoder hidden state is initialized as $h_n$. The RNN decoder outputs a sequence of tokens, starting with SOS token and possibly ending with EOS tokens. If the output reaches the length limit, the final token may not be EOS token.
+The seq2seq model is consisted of two main parts: RNN encoder and RNN decoder. For the encoder part, the input is a sequence of input tokens starting with the start-of-sequence (SOS) token and ending with the end-of-sequence (EOS) token. Here input tokens (2 to n-1, corresponding to the name of $h$) are tokens from short text. $h_n$ refers to the final hidden state of the encoder. For the decoder part, the decoder input is initialized as the numerical identifier of SOS token and the decoder hidden state is initialized as $h_n$. The RNN decoder outputs a sequence of tokens, starting with SOS token and possibly ending with EOS tokens. Here the output tokens are  tokens from words (2 to m-1, corresponding to the name of $S$). If the output reaches the length limit, the final token may not be EOS token.
 
 
 
@@ -26,19 +26,19 @@ Here I use the greedy decoding on the developement dataset to do the error analy
 
 **Example 1:**
 
-**Input sequence:** ('name[The Punter]', 'eatType[coffee shop]', 'food[English]', 'priceRange[cheap]', 'customer rating[5 out of 5]', 'familyFriendly[no]', 'near[Café Sicilia]') 
+**Input sequence:**  ('name[The Mill]', 'eatType[coffee shop]', 'food[Chinese]', 'priceRange[high]', 'area[city centre]', 'near[The Sorrento]')
 
-**Greedy decoder prediction:** " <sos> The Punter is a cheap coffee shop near Café Sicilia. It is is 5 out of 5 and is not family-friendly. <eos>" with BLEU score: 0.34.  
+**Greedy decoder prediction:** " <sos> The Mill is a coffee shop located near The located in the The Sorrento. <eos>" with BLEU score: 0.45.  
 
 **Beam search decoder prediction:**
 
-" <sos> There is a cheap coffee shop called The Punter located near Café Sicilia. It serves English food and is not family-friendly. 5 out of 5 and is not family-friendly. <eos> with BLEU score 0.57. 
+" <sos> The Mill is an Italian coffee shop located near The Sorrento in the city centre. <eos> with BLEU score 0.51. 
 
-"<sos> There is a cheap coffee shop called The Punter located near Café Sicilia. It serves English food and is rated 5 out of 5 by customers. <eos>" with BLEU score  0.57.
+"<sos> The Mill is an Italian coffee shop located near The Sorrento. It is located in the city centre. <eos>" with BLEU score  0.53.
 
-"<sos> There is a cheap coffee shop called The Punter located near Café Sicilia. It serves English food and is rated 5 out of 5. <eos>" with BLEU score 0.56.
+"<sos> The Mill is an Italian coffee shop located near The Sorrento. It is located in the riverside. <eos>" with BLEU score 0.41.
 
-**Analysis: ** 
+**Analysis: ** Here beam search doesn't include the greedily decoder output. The three outputs have the same start of the sentence but later become different. We could see that the beam search outputs have better grammar performance than greedy output. All three beam search outputs contain more information than the greedy one. However, some of the information didn't appear in the input, which may exist in the training data. We could see that the second output has more words than the first one, although they both contains the same information. Due to the different length, the second output has higher BLEU score. The second and third output has similar lengths, but due to the wrong information in the third output, it even has lower BLEU score than greedy.
 
 **Example 2:**
 
@@ -54,37 +54,33 @@ Here I use the greedy decoding on the developement dataset to do the error analy
 
 "<sos> In the city centre, The Golden Palace is a highly rated coffee shop that serves English food. It is located in the city centre and is rated highly by customers. <eos>" with BLEU score 0.4.
 
+**Analysis:** Here beam search doesn't include the greedily decoder output. The sentence lengths vary among the three outputs of beam search, but they contain similar information, more than that in greedily decoder output. The three outputs have the same start of the sentence but later become different. The different lengths due to the repeated information in the outputs, which leads to different BLEU scores.
+
 **Example 3:**
 
-**Input sequence:** ('name[Fitzbillies]', 'eatType[coffee shop]', 'food[English]', 'priceRange[moderate]', 'customer rating[1 out of 5]', 'area[riverside]', 'familyFriendly[no]')
+**Input sequence:** ('name[Fitzbillies]', 'eatType[coffee shop]', 'food[Chinese]', 'priceRange[less than £20]', 'customer rating[low]', 'area[riverside]', 'familyFriendly[no]')
 
-**Greedy decoder prediction:** " <sos> Fitzbillies is a moderately priced coffee shop in the city centre. It is the of the is and is not It is is of <eos>" with BLEU score: 0.3  
+**Greedy decoder prediction:** " <sos> Fitzbillies is a low priced family friendly coffee shop located in the city centre. <eos>" with BLEU score: 0.35. 
 
 **Beam search decoder prediction:**
 
-" <sos> There is a moderately priced coffee shop serving English food in the riverside area named The Wrestlers. It is moderately priced and is rated 1 out of 5 by customers. <eos> with BLEU score 0.46. 
+" <sos> Fitzbillies is a low priced family friendly coffee shop serving Chinese food. It is located in the city centre. <eos> with BLEU score 0.52. 
 
-"<sos> There is a moderately priced coffee shop serving English food in the riverside area named The Wrestlers. It is moderately priced and is rated 1 out of 5 and is not child friendly. <eos>" with BLEU score  0.52.
+"<sos> Fitzbillies is a low priced family friendly coffee shop serving Chinese food. It is located in the city centre and has a low customer rating. <eos>" with BLEU score  0.5.
 
-"<sos> There is a moderately priced coffee shop serving English food in the riverside area named The Wrestlers. It is moderately priced and is rated 1 out of 5 and is not family-friendly. <eos>" with BLEU score 0.53.
+"<sos> Fitzbillies is a low priced family friendly coffee shop located in the city centre. <eos>" with BLEU score 0.35.
 
-
-
-
-
-How do the multiple outputs differ?
+**Analysis:** Here the beam search includes the greedily decoded output, as the third one. The three outputs have the same start of the sentence but later become different. The first two outputs are similar in length, information and BLEU scores, which are much better than the greedy one. One weird thing is although output 2 contains more correct information than the first one, it has lower BLEU score. This may due to the paraphrase issue in the reference sentences. 
 
 
 
-No, beam search doesn't always include the greedily decoded output because I added the length penalty in the sequence likelihood. Hence the most likely word in greedy decoding may not beat other less likely words in the beam.
+No, beam search doesn't always include the greedily decoded output because I added the length penalty in the sequence likelihood. Hence the most likely word in greedy decoding may not beat other less likely words in the beam. As shown in the examples, only beam search in example 3 includes the greedily decoded output.
 
-Advantages of beam search: at each decoding step, beam search decoding cosses the top $k$ most likely sequences instead of the most likely sequence in the greedy decoding and hence  it has a broader search space than greedy and provides multiple output finally. Also, the beam size is a tunable parameter, which could be used to control the search process and get better result. 
+**Advantages of beam search**: at each decoding step, beam search decoding cosses the top $k$ most likely sequences instead of the most likely sequence in the greedy decoding and hence  it has a broader search space than greedy and provides multiple output finally. Also, the beam size is a tunable parameter, which could be used to control the search process and get better result. 
 
-Disadvantanges of beam search: the beam search expands more space than the greedy decoding and hence it takes longer running time and larger space. Moreover, since it keeps beam-size number of best partial solutions as  candidates, the output could not be guaranteed to be optimal.
+**Disadvantanges of beam search**: the beam search expands more space than the greedy decoding and hence it takes longer running time and larger space. Moreover, since it keeps beam-size number of best partial solutions as  candidates, the output could not be guaranteed to be optimal.
 
-
-
-
+From the three examples, we could see that the BLEU score of three beam search outputs vary: some are better than greedy and some are worse. Generally speaking, beam search has a higher BLEU score than greedy.
 
 
 
@@ -100,7 +96,7 @@ The problems with BLEU scores are:
 So BLEU may over- or under-estimate performance. In our case, since we use model generation, it tends to over-estimate performance more. Here are examples:
 
 1. The input is ('name[Fitzbillies]', 'eatType[coffee shop]', 'food[English]', 'priceRange[cheap]', 'customer rating[5 out of 5]', 'area[riverside]', 'familyFriendly[no]') and the prediction "Fitzbillies coffee shop in Riverside. It is not a coffee shop with a customer rating and is not family-friendly." got a BLEU score 0.49. It misused the "no" in "familyFriendly" in the "eatType" so the meaning is distorted. But BLEU could not figure it out.
-2. The input is ('name[Cocum]', 'eatType[coffee shop]', 'food[Chinese]', 'priceRange[less than £20]', 'customer rating[low]', 'familyFriendly[yes]') and the prediction "Cocum is a coffee shop serving Indian food and is less than £20." got a BLEU score 0.44. The prediction made mistakes and lost almost half of the information in the input due to the short length. But since most words in the prediction also appeared in the reference sentences, the BLEU score over-estimate the performance.
+2. The input is ('name[Cocum]', 'eatType[coffee shop]', 'food[Chinese]', 'priceRange[less than £20]', 'customer rating[low]', 'familyFriendly[yes]') and the prediction "Cocum is a coffee shop serving Indian food and is less than £20." got a BLEU score 0.44. The prediction made mistakes and lost almost half of the information in the input . But since most words in the prediction also appeared in the reference sentences, the BLEU score over-estimate the performance.
 
 The Benefits ot BLEU are: it's automated, quick and inexpensive. It is reported to be correlated well with human judgement. Although it has multiple problems, it is still a widely used metrics.
 
@@ -151,3 +147,4 @@ So the issue here is how we build the connection between attribute "name" with i
 
 ### 2.7. What problems might occur in different languages?
 
+I think E2E challenge might be harder in Chinese than in English. One big difference between English and Chinese is that: the unit of English is words, which are segmented by blank space while the unit of Chinese is characters, which don't have a natural segmentation. So when doing Chinese NLP task, one extra step than English NLP task is the segmentation of characters, which turn a group of characters into words and different character segmentations may lead to different words (some segmentation may not be meaningful). This may lower the performance of the seq2seq model, in the decoder part, for example.
